--- a/htmlcss/b4.html
+++ b/htmlcss/b4.html
@@ -11,13 +11,37 @@
 <body>
     <div class="main">
         <div class="title">
-            <div class="left"><h1>AVATAR</h1></div>
-            <div class="right"><h1>PROFILE</h1></div>
-        <div class="content">
-
+            <div class="left"><button>AVATAR</button></div>
+            <div class="right"><button>PROFILE</button></div>
         </div>
-
-
+        <div class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum debitis culpa accusamus necessitatibus qui provident nulla, eos reiciendis consequuntur architecto rerum iste at aperiam et iure sunt pariatur sequi doloremque!.Nostrum debitis culpa accusamus necessitatibus qui provident nulla, eos reiciendis consequuntur architecto rerum iste at aperiam et iure sunt pariatur sequi doloremque!Nostrum debitis culpa accusamus necessitatibus qui provident nulla, eos reiciendis consequuntur architecto rerum iste at aperiam et iure sunt pariatur sequi doloremque!</p>
+            <div class="select"  >
+            <h4>Chose a car     <h4> <select  name="" id="">
+                    <option value="" >Volvo</option>
+                    <option value="" >BMW</option>
+                    <option value="" >Honda</option>
+                </select>
+            </div>
+            <div class="select"> 
+                HTML<input name="car" type="radio">
+                CSS<input name="car" type="radio">
+                RUBY<input name="car" type="radio">
+            </div>
+            <div class="select "> 
+                <input class="ot" type="checkbox">   <p>  I have a bike</p>
+                <input class="ot" type="checkbox">   <p>  I have a car</p>
+                <input class="ot" type="checkbox">   <p>  I have a boat</p>
+            </div>
+            <div class="select">
+                <form action="">
+                    <div>
+                        <input type="text" class="text" name="" id="">
+                    </div>
+                    <div class="select"><button>Submit</button></div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 </html>
