--- a/htmlcss/file2.html
+++ b/htmlcss/file2.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./file2.css">
 </head>
 <body>
@@ -31,12 +33,14 @@
                 <input  type="file" name="" id="">
             </div>
         </div>
-        <div class="triangled">
+        <div class="triangle">
 
         </div> 
         <div class="footer">
             <p>this is footer</p>
         </div>
         </div>
+
+       
 </body>
 </html>
