--- a/b5.html
+++ b/b5.html
@@ -9,8 +9,8 @@
   <body>
     <div class="container">
       <input type="checkbox" id="checkmenu" style="display: none" />
-      <div class="click__top">
-        <nav class="click__top-menu">
+      <div class="top">
+        <nav class="top-menu">
           <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">SERVICE</a></li>
@@ -19,7 +19,7 @@
           </ul>
         </nav>
         <label for="checkmenu"
-          ><div class="click click__top-button"></div
+          ><div class="click top-button"></div
         ></label>
       </div>
       <div class="center">
@@ -28,23 +28,23 @@
             type="radio"
             name="tab"
             id="tab1"
-            class="tabs__radio"
+            class="radio"
             checked
           />
-          <label for="tab1" class="tabs__label">AVATAR</label>
-          <div class="tabs__content">
+          <label for="tab1" class="label">AVATAR</label>
+          <div class="content">
             <div>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ratione, voluptatem, ea doloremque qui, iste ipsam eius labore autem consequuntur ad corporis voluptate expedita nobis quas placeat enim quo ipsa.
               </p>
             </div>
-            <div class="group__form">
+            <div class="form">
               <div>
                 <label for="car">Choose a car:</label>
                 <select>
                   <option value="value1">Volvo</option>
-                  <option value="value2">Option 2</option>
-                  <option value="value3">Option 3</option>
+                  <option value="value2">BMW</option>
+                  <option value="value3">Ford</option>
                 </select>
               </div>
               <div>
@@ -85,13 +85,13 @@
               </div>
             </div>
           </div>
-          <input type="radio" name="tab" id="tab3" class="tabs__radio" />
-          <label for="tab3" class="tabs__label">PROFILE</label>
-          <div class="tabs__content">
+          <input type="radio" name="tab" id="tab3" class="radio" />
+          <label for="tab3" class="label">PROFILE</label>
+          <div class="content">
             <div class="profile">
-              <div class="profile__img">
+              <div class="img">
                 <img
-                  src="https://i.pinimg.com/originals/ec/b9/2d/ecb92d18c7855c986a5571c1b6f7cad2.jpg"
+                  src="https://www.shutterstock.com/image-illustration/3d-rendering-4k-image-abstract-260nw-1807917784.jpg"
                   alt="anh-profile"
                 />
               </div>
@@ -106,11 +106,11 @@
         </div>
       </div>
       <input type="checkbox" id="checkfooter" />
-      <div class="click__bottom">
+      <div class="bottom">
         <label for="checkfooter"
-          ><div class="click click__bottom-button"></div
+          ><div class="click bottom-button"></div
         ></label>
-        <div class="click__bottom-footer">Cagg ABC CA. La All Rigs Ronal</div>
+        <div class="bottom-footer">Cagg ABC CA. La All Rigs Ronal</div>
       </div>
     </div>
   </body>
